--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <try-riot-with-obseriot></try-riot-with-obseriot>
-    <script src="/dist/bundle.js" charset="utf-8"></script>
+    <script src="dist/bundle.js" charset="utf-8"></script>
 
   </body>
 </html>
