rename long tag name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-    <try-riot-with-obseriot></try-riot-with-obseriot>
+    <app></app>
     <script src="dist/bundle.js" charset="utf-8"></script>
 
   </body>
